--- a/result/vata.html
+++ b/result/vata.html
@@ -168,7 +168,7 @@
                 <tbody>
                     {{rows}}
                 </tbody>
-                <tfoot>
+                <tbody>
                     <tr class="fw-bold bg-gray text-center">
                         <td colspan="4" class="text-right">সর্বমোট:</td>
                         <td>{{total_prv}}</td>
@@ -186,7 +186,7 @@
                         <td>{{total_net}}</td>
                         <td></td>
                     </tr>
-                </tfoot>
+                </tbody>
             </table>
 
             <table width="100%" class="signature-table" style="margin-top: 20px; border: none;">
