--- a/generate/sql.html
+++ b/generate/sql.html
@@ -80,8 +80,7 @@ where table public.polling_list (
 
 
 
-
- where  table public.centre_assignments (
+create table public.centre_assignments (
   assignment_id bigserial not null,
   vote_centre_iid integer not null,
   vote_centre_code text not null,
@@ -95,6 +94,7 @@ where table public.polling_list (
   assign_code text not null,
   created_at timestamp with time zone null default now(),
   updated_at timestamp with time zone null default now(),
+  change_record text null,
   constraint centre_assignments_pkey primary key (assignment_id),
   constraint unique_assignment unique (vote_centre_iid, officer_type, officer_iid),
   constraint centre_assignments_officer_type_check check (
@@ -121,8 +121,6 @@ create index IF not exists idx_centre_assignments_created_at on public.centre_as
 create trigger trigger_update_centre_assignments_updated_at BEFORE
 update on centre_assignments for EACH row
 execute FUNCTION update_centre_assignments_updated_at ();
-
-
 
 
 
