--- a/generate/master_roll4.html
+++ b/generate/master_roll4.html
@@ -330,10 +330,7 @@
             return `
                 <div class="item-container">
                     <div class="header">
-                        <h2>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</h2>
-                        <h2>জেলা প্রশাসকের কার্যালয়</h2>
-                        <h2>ও</h2>
-                        <h2>রিটার্নিং অফিসারের কার্যালয়, ফেনী</h2>
+                       
                         <h1>ত্রয়োদশ জাতীয় সংসদ নির্বাচন - ২০২৬</h1>
                         <h3>নির্বাচনি উপকরণ প্রাপ্তিস্বীকার</h3>
                     </div>
@@ -350,7 +347,7 @@
                     </div>
 
                     <div class="items-list">
-                        <div>১. ঢাকনাসহ ব্যালট বাক্স – বুথ সংখ্যা+২ টি (${toBengaliNumber(boothCount + 2)} টি)</div>
+                        <div>১. ঢাকনাসহ ব্যালট বাক্স –  ${toBengaliNumber(boothCount + 2)} টি</div>
                         <div>২. গনভোট বড় গানিব্যাগ- ০১ টি</div>
                         <div>৩. জাতীয় সংসদ নির্বাচন বড় গানিব্যাগ-০১ টি</div>
                         <div>৪. ছোট গানী ব্যাগ- ০১ টি</div>
