--- a/generate/master_roll4.html
+++ b/generate/master_roll4.html
@@ -331,7 +331,8 @@
                 <div class="item-container">
                     <div class="header">
                        
-                        <h1>ত্রয়োদশ জাতীয় সংসদ নির্বাচন - ২০২৬</h1>
+                        <h1>ত্রয়োদশ জাতীয় সংসদ নির্বাচন ও গনভোট- ২০২৬</h1>
+                        <h1>সংসদীয় আসন - ২৬৬ ফেনী ২</h1>
                         <h3>নির্বাচনি উপকরণ প্রাপ্তিস্বীকার</h3>
                     </div>
 
