--- a/dashboard.html
+++ b/dashboard.html
@@ -486,9 +486,17 @@
 						<span class="icon">🗺️</span>
 						<span>Vote Centres</span>
 					</a>
-					<a class="button secondary" href="training_list.html" title="ট্রেনিং তালিকা">
+					<a class="button secondary" href="4_duplicate_list.html" title="Duplicate তালিকা">
 						<span class="icon">🎯</span>
-						<span>ট্রেনিং তালিকা</span>
+						<span> Duplicate list</span>
+					</a>
+					<a class="button secondary" href="5_name_approval.html" title="Duplicate তালিকা">
+						<span class="icon">🎯</span>
+						<span> Name change approval</span>
+					</a>
+					<a class="button secondary" href="#" title="Training letter">
+						<span class="icon">🎯</span>
+						<span> Training letter</span>
 					</a>
 				</div>
 			</div>
