--- a/result/result_billboard.html
+++ b/result/result_billboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>নির্বাচন ফলাফল বোর্ড - Election Result Billboard</title>
+    <title>Election Result Billboard</title>
     <style>
         * {
             margin: 0;
