--- a/dashboard.html
+++ b/dashboard.html
@@ -631,6 +631,10 @@
 						<span class="icon">✏️</span>
 						<span>Form 18</span>
 					</a>
+					<a class="button success" href="result/bartashit.html" title="Edit Duty List">
+						<span class="icon">✏️</span>
+						<span>বার্তাশীট</span> 
+					</a>
 					<a class="button primary" href="result/z_malamal.html" title="Duty Finding">
 						<span class="icon">🔎</span>
 						<span>মালামাল</span>
